# LoLLama

./: .gitignore  README.md  pyproject.toml
configs/: config.example.yaml
skills/word_count/: SKILL.md
skills/word_count/scripts/: main.py
src/lollama/: _logging.py  agent.py  cli.py  config.py  upstream.py
src/lollama/memory/: __init__.py  embedding.py  extractor.py  manager.py  store.py  textutil.py
src/lollama/service/: __init__.py  server.py
src/lollama/skills/: __init__.py  loader.py  sandbox.py
src/lollama/tools/: __init__.py  builtin.py  registry.py
tests/: test_agent.py  test_config.py  test_memory.py  test_memory_store.py  test_server_ws.py  test_skills.py  test_status_hooks.py  test_tools.py
