[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lollama"
version = "0.1.0"
description = "Full-duplex local LLM agent service with layered memory and tool calling, fronting an OpenAI-compatible model API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "SlowFeather" }]
keywords = ["llm", "agent", "memory", "tool-calling", "websocket", "lmstudio"]
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6",
    "websockets>=12",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
lollama = "lollama.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
