[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lollama"
version = "0.1.0"
description = "Full-duplex local LLM agent service with layered memory and tool calling, fronting an OpenAI-compatible model API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "SlowFeather" }]
keywords = ["llm", "agent", "memory", "tool-calling", "websocket", "lmstudio"]
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6",
    "websockets>=12",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff>=0.12", "mypy>=1.16", "pip-audit>=2.9"]

[project.scripts]
lollama = "lollama.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120

[tool.mypy]
files = ["src/lollama/config.py", "src/lollama/memory/textutil.py", "src/lollama/memory/embedding.py"]
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
follow_imports = "skip"
